--- a/java-app.yaml
+++ b/java-app.yaml
@@ -1,15 +1,44 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: datadog-java-apm-demo
-  annotations:
-    admission.datadoghq.com/java-lib.version: "latest"
   labels:
-    admission.datadoghq.com/enabled: "true"
+    run: java-app
+    tags.datadoghq.com/env: "lab"
+    tags.datadoghq.com/service: "java-app"
+    tags.datadoghq.com/version: "1"
+  name: java-app
 spec:
-  containers:
-  - name: java-app
-    image: petems/datadog-java-apm-demo
-    ports:
-    - containerPort: 8080
-  
+  replicas: 1
+  selector:
+    matchLabels:
+      run: java-app
+  template:
+    metadata:
+      labels:
+        run: java-app
+        tags.datadoghq.com/env: "lab"
+        tags.datadoghq.com/service: "java-app"
+        tags.datadoghq.com/version: "1"
+        admission.datadoghq.com/enabled: "true"
+      annotations:
+        name: java-app
+        # log to stdout
+        ad.datadoghq.com/java-app.logs: |
+          [{
+            "source":"java",
+            "service":"java-app",
+            "log_processing_rules":[{"type":"multi_line",
+            "name":"log_start_with_date","pattern":"\\d{4}-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])"}]
+          }]
+        admission.datadoghq.com/java-lib.version: "v1.31.2"
+    spec:
+      containers:
+      - image: petems/datadog-java-apm-demo
+        name: java-app
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+          hostPort: 8080
+          name: "http"
+      nodeSelector:
+        kubernetes.io/os: linux
